# UIGL

./: CMakeLists.txt  MutexObject.h  README.md  Runtime.cpp  Runtime.h  TimeTrigger.cpp  TimeTrigger.h  main.cpp
app/: App.cpp  App.h  Window.h
app/dispatcher/: Dispatcher.cpp  Dispatcher.h  DispatcherGlobals.h  DispatcherOperation.h
